Fixed timeline on mobile

--- a/less/content/chart.less
+++ b/less/content/chart.less
@@ -98,26 +98,3 @@
 .navbar-right {
     float: right!important;
 }
-
-@media only screen and (max-width: 760px) {
-    .timeline-nav {
-        .play-control {
-        }
-
-        .play-bar {
-            width: 90%;
-        }
-    }
-}
-
-@media only screen and (max-width: 480px) {
-    .timeline-nav {
-        .play-control {
-        }
-
-        .play-bar {
-            width: 82%;
-        }
-    }
-}
-
