--- a/less/content/timeline.less
+++ b/less/content/timeline.less
@@ -48,6 +48,28 @@
     }
 }
 
+@media only screen and (max-width: 760px) {
+    .timeline-nav {
+        .play-control {
+        }
+
+        .play-bar {
+            width: 90%;
+        }
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .timeline-nav {
+        .play-control {
+        }
+
+        .play-bar {
+            width: 82%;
+        }
+    }
+}
+
 @-moz-document url-prefix() { 
     .timeline-nav {
         .play-bar {
